# CSSR

./: .gitignore  AUTHORS.md  AllStates.cpp  AllStates.h  CHANGELOG.md  CSSR.cabal  Hash2.cpp  Machine.cpp  Main.cpp  Main.h  Makefile  ParseTree.h  README.md  ReadMe.html  ReadMe.txt  Test.cpp  TransTable.cpp  cssr.cabal  stack.yaml
cli/: Cli.hs  Main.hs
cpp/: .gitignore  AllStates.cpp  AllStates.h  CMakeLists.txt  Common.h  G_Array.cpp  G_Array.h  Hash.cpp  Hash.h  Hash2.cpp  Hash2.h  Machine.cpp  Machine.h  Main.cpp  Main.h  Makefile  ParseTree.cpp  ParseTree.h  States.cpp  States.h  Test.cpp  Test.h  TransTable.cpp  TransTable.h
hs/: .gitignore  .sosrc  Makefile  cssr.cabal  package.yaml  stack.yaml
hs/app/: Cli.hs  Main.hs
hs/src/CSSR/: Prelude.hs  TypeAliases.hs
hs/src/Data/CSSR/: Debug.hs  ParseTree.hs  Test.hs  Tree.hs  Types.hs
hs/src/Data/Parse/: Tree.hs
hs/src/Data/Statistics/: F1.hs  KologorovSmirnov.hs
hs/src/Data/Statistics/Entropy/: Rate.hs
hs/test/CSSR/: TestPrelude.hs
hs/test/Data/Parse/: Tree.hs
python/.ipynb_checkpoints/: CSSR-checkpoint.ipynb
scala/: .gitignore  build.sbt
scala-old/src/CSSR/: Main.scala
scala-old/src/CSSR/parse/: ParseTree.scala
scala-old/src/CSSR/states/: AllStates.scala  Translations.scala
scala/src/CSSR/: Machine.scala  Main.scala
scala/src/CSSR/parse/: Parse.scala
scala/src/CSSR/states/: AllStates.scala  State.scala
scala/src/CSSR/test/: Test.scala
scala/src/main/resources/alphabets/: flip_alpha
scala/src/main/resources/test-machines/biased-coin/: biased-coin.pl
scala/src/main/resources/test-machines/biased-drift-on-ring/: biased-drift-on-ring.pl
scala/src/main/resources/test-machines/even-process/: even-process.pl
scala/src/main/resources/test-machines/noisy-period-two/: noisy-period-two.pl
scala/src/main/scala-2.11/com/typeclassified/: viterbi.scala
scala/src/main/scala-2.11/com/typeclassified/cssr/: CSSR.scala  CSSRState.scala  CausalState.scala  EquivalenceClass.scala  KolmogorovSmirnov.scala  Probabalistic.scala  Probablistic.scala  State.scala  Test.scala
scala/src/main/scala-2.11/com/typeclassified/cssr/cli/: Cli.scala  Config.scala
scala/src/test/resources/test-machines/all-same-symbol/: all-same-symbol.pl
scala/src/test/resources/test-machines/alternating-biased-coins/: alternating-biased-coins.pl
scala/src/test/resources/test-machines/even-process/: EP_timeseq  even-process.pl
scala/src/test/resources/test-machines/even-process/cpp/: EP_timeseq_inf.dot  EP_timeseq_info  EP_timeseq_results  EP_timeseq_state_series
scala/src/test/resources/test-machines/foulkes/: Foulkes_timeseq  foulkes.pl
scala/src/test/resources/test-machines/foulkes/cpp/: Foulkes_timeseq_inf.dot  Foulkes_timeseq_info  Foulkes_timeseq_results  Foulkes_timeseq_state_series
scala/src/test/resources/test-machines/hidden-drift/: hidden-drift.pl
scala/src/test/resources/test-machines/hidden-markov/: hidden-markov.pl
scala/src/test/resources/test-machines/misiurewicz/: Misiurewicz_timeseq  misiurewicz.pl
scala/src/test/resources/test-machines/misiurewicz/cpp/: Misiurewicz_timeseq_inf.dot  Misiurewicz_timeseq_info  Misiurewicz_timeseq_results  Misiurewicz_timeseq_state_series
scala/src/test/resources/test-machines/periodic-with-noise/: periodic-with-noise.pl
scala/src/test/resources/test-machines/state-periodic-and-synching/: state-periodic-and-synching.pl
scala/src/test/resources/test-machines/tricky-hidden-markov/: tricky-hidden-markov.pl
src/: CSSR.hs  Main.hs
src/CSSR/: Cli.hs  Initialization.hs  ParseTree.hs  Recursion.hs  Sufficiency.hs
src/CSSR/CausalState/: History.hs  State.hs
src/CSSR/Parse/: Cli.hs  Tree.hs
src/CSSR/Utils/: Test.hs
test/: Spec.hs  StartTestingSpec.hs
test-machines/: README  alternating-biased-coins.pl  biased-drift-on-ring.pl  even-process.pl  flip_per_holmes_isbell.pl  foulkes.pl  hidden-drift.pl  random-hidden-markov.pl  snd.pl
test/CSSR/: ParseTreeTests.hs
test/CSSR/Parse/: TreeSpec.hs
test/CSSR/Utils/: TestSpec.hs
utils/: CSSRfilter.pl  README  bic-selector-with-alpha.pl  bic-selector-with-siglevel-and-entropy.pl  bic-selector.pl  empirical-error-of-HMM.pl  inferred-versus-true-alt-version.pl  inferred-versus-true.pl  likelihood-under-CSM.pl  multifile-bic-selector.pl  multiple-inference.pl  sns-inferred-versus-true.pl  update-machine-probs.pl
(+83 files in other folders)
