name:                CSSR
version:             0.1.0.0
synopsis:            CSSR tries to infer the minimal Markovian model capable of generating a time-series, or set of time-series from the same source.
description:         See README.md
homepage:            https://github.com/stites/CSSR
license:             BSD3
license-file:        LICENSE
author:              Sam Stites
maintainer:          sam@stites.io
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable CSSR
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , CSSR
  default-language:    Haskell2010

test-suite CSSR
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CSSR
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stites/CSSR

