name:                CSSR
version:             0.1.0.0
synopsis:            An Algorithm for Building Markov Models from Time Series
description:         See README.md
homepage:            https://github.com/stites/CSSR
license:             BSD3
license-file:        LICENSE
author:              Sam Stites
maintainer:          sam@stites.io
-- copyright:
category:            Machine Learning, Markov Models
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

-- library
--   hs-source-dirs:      src
--   exposed-modules:     CSSR
--   build-depends:       base >= 4.7 && < 5, text, hspec, QuickCheck
--   default-language:    Haskell2010

executable CSSR
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

-- ============================== --
test-suite CSSRspec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, hspec, QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
-- ============================== --

source-repository head
  type:     git
  location: https://github.com/stites/CSSR

