name:                CSSR
version:             0.1.0.0
synopsis:            An Algorithm for Building Markov Models from Time Series
description:         See README.md
homepage:            https://github.com/stites/CSSR
license:             BSD3
license-file:        LICENSE
author:              Sam Stites
maintainer:          sam@stites.io
-- copyright:
category:            Machine Learning, Markov Models
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CSSR
  build-depends:       base, vector, containers >= 0.5
  default-language:    Haskell2010

-- executable CSSR
--   hs-source-dirs:      cli
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base, vector, optparse-applicative
--   default-language:    Haskell2010

-- ============================== --
test-suite spec
  build-depends:       base, hspec, QuickCheck
  main-is:             Spec.hs
  hs-source-dirs:      test, src
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-- ============================== --

source-repository head
  type:     git
  location: https://github.com/stites/CSSR

